<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hoangtv.authenticationdemo1.Result">

    <TextView
        android:id="@+id/txt_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_get_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile" />

    <Button
        android:id="@+id/btn_get_provide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile" />

    <Button
        android:id="@+id/btn_update_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_profile" />

    <Button
        android:id="@+id/btn_update_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_email" />

    <Button
        android:id="@+id/btn_update_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_password" />

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password" />

    <Button
        android:id="@+id/btn_delete_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete" />

    <Button
        android:id="@+id/btn_re_authenticate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/re_cauthenticate" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Logout" />

</LinearLayout>
